# Softwarequalit-tssicherung

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html
.github/workflows/: BuildAndDepoly.yml
Uebungsblatt00/: Uebungsblatt00_Jonas-Merkle.html
Uebungsblatt00/src/LunarLander_Tests/: .gitignore
Uebungsblatt01/: Uebungsblatt01_Jonas-Merkle.html
Uebungsblatt01/src/BST/: BST.sln
Uebungsblatt01/src/BST/BinarySearchTree.Lib/: Node.cs
Uebungsblatt01/src/BST/BinarySearchTree.Lib/Mutants/M1/: BinarySearchTree.cs
Uebungsblatt01/src/BST/BinarySearchTree.Lib/Mutants/M2/: BinarySearchTree.cs
Uebungsblatt01/src/BST/BinarySearchTree.Lib/Mutants/M6/: BinarySearchTree.cs
Uebungsblatt01/src/BST/BinarySearchTree.Tests/: PropertyTests.cs
Uebungsblatt02/: Blatt02.md  CMakeLists.txt  Uebungsblatt02_Jonas-Merkle.html
Uebungsblatt02/src/SeleniumTestOfLSF/: SeleniumTestOfLSF.sln
Uebungsblatt02/src/SeleniumTestOfLSF/SeleniumTestOfLSF/: SeleniumTestOfLSF.csproj
Übung/Blatt00/: Blatt00.md  CMakeLists.txt
Übung/Blatt00/resources/: LanderCollisionClasses.drawio
Übung/Blatt00/src/: README.md
Übung/Blatt00/src/LunarLander_Tests/src/LunarLander/: GameModelTest.java
Übung/Blatt00/src/LunarLander_Tests_Jonas_Merkle/src/LunarLander/: GameModelTest.java
Übung/Blatt01/: Blatt01.md  CMakeLists.txt
Übung/Blatt01/src/BST/BinarySearchTree.Lib/: BinarySearchTree.cs
Übung/Blatt01/src/BST/BinarySearchTree.Lib/Mutants/M10/: BinarySearchTree.cs
Übung/Blatt01/src/BST/BinarySearchTree.Lib/Mutants/M3/: BinarySearchTree.cs
Übung/Blatt01/src/BST/BinarySearchTree.Lib/Mutants/M4/: BinarySearchTree.cs
Übung/Blatt01/src/BST/BinarySearchTree.Lib/Mutants/M5/: BinarySearchTree.cs
Übung/Blatt01/src/BST/BinarySearchTree.Lib/Mutants/M7/: BinarySearchTree.cs
Übung/Blatt01/src/BST/BinarySearchTree.Tests/: BinarySearchTree.Tests.csproj
Übung/Blatt02/: Blatt02.md
Übung/Blatt02/src/SeleniumTestOfLSF/SeleniumTestOfLSF/: SeleniumTestOfLSF.csproj  UiTests.cs
Übung/Blatt03/: Blatt03.md  CMakeLists.txt
Übung/BlattXX/: BlattXX.md  CMakeLists.txt
(+2 files in other folders)
